--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,5 +1,20 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to #{title}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <h1>Create user</h1>
+  <form action="" method="POST">
+    <label for="username">Username</label>
+    <input type="text" name="username">
+    <label for="password"></label>
+    <input type="password" name="password">
+    <button type="submit">Create user</button>
+  </form>
+  <h2>Already a user? <a href="/login"> Log in </a> </h2>
+</body>
+</html>
